# mcserver

./: .checkserver  .gitignore  Cargo.toml  LICENSE  README.md  config.toml  eula.txt  install  install-arch  install-ubuntu  installBedrock  installJava  installJava-arch  installJava-ubuntu  resources.md  script.py  specinfo  startAfk  startBedrockServer  startJavaServer  startNgrokServer  startPlayIt  startserver  stopserver  todo.md  uninstall  update
.devcontainer/: devcontainer.json
.github/workflows/: codacy-analysis.yml  default-test.yml
BedrockInstallScripts/: GoMintInstall  NukkitInstall  PocketmineInstall  VanillaInstall
JavaInstallScripts/: BungeecordInstall  CuberiteInstall  FabricInstall  ForgeInstall  GlowstoneInstall  PaperInstall  SpigotInstall  SpongeInstall  VanillaInstall
src/: args.rs  build.rs  centro.rs  check.rs  config.rs  config_builder.rs  generate.rs  get_url.rs  java.rs  log.rs  main.rs  run.rs  setup.rs  start.rs  stop.rs  utils.rs
src/generate/: build.rs  generate.rs
